--- a/index.html
+++ b/index.html
@@ -14,9 +14,44 @@
     <header>
         <h1>Ouricuri News</h1>
     </header>
-    <div id="diaria" class="container visible">
-       <span>ehehe</span>
 
+    <div id="diaria" class="container visible">
+        <section class="conteudo">
+            <a class="links" href="https://www.youtube.com/watch?v=eFiB_WLkE9M"><figure>
+                <img src="imgs/download (3).jpeg">
+                <figcaption>Nal do canal kak zkmcz kcmzk lkdld dkamsdkas kasdkas ksdakd.
+                    <b>Fonte:</b><a href="www.youtube.com"> YouTube</a>;</figcaption>
+            </figure></a>
+        </section>
+        <section class="conteudo">
+            <a><figure>
+                <img src="imgs/download (2).jpeg">
+                <figcaption>Manel Gomes.
+                    <b>Fonte:</b><a href="www.youtube.com"> YouTube</a>;</figcaption>
+            </figure></a>
+        </section>
+        <section class="conteudo">
+            <a><figure>
+                <img src="imgs/download (1).jpeg">
+                <figcaption>Cleiton Rasta.
+                    <b>Fonte:</b><a href="www.youtube.com"> YouTube</a>;</figcaption>
+            </figure></a>
+        </section>
+        <section class="conteudo">
+            <a><figure>
+                <img src="imgs/download.jpeg">
+                <figcaption>Ricardo Milos.
+                            <b>Fonte:</b><a href="www.youtube.com"> YouTube</a>;
+                </figcaption>
+            </figure><a>
+        </section>
+        <section class="conteudo">
+            <a href=""><figure>
+                <img src="imgs/images.jpeg">
+                <figcaption>Mia Khalifa.
+                    <b>Fonte:</b><a href="www.youtube.com"> Xvidros</a></figcaption>
+            </figure></a>
+        </section>
     </div>
     <div id="todas" class="container">
         <span>edasafasa</span>
