--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
 
         <div id="page2" class="noticias">
-            <div id="botao-voltar">
+            <div id="botao-voltar" class="barra">
                 <button id="voltar" onclick="teste('visible','#page1', '#page2')">
                     <figure>
                         <img src="icons/download.png">
